# llvm-project

openmp/libomptarget/cmake/Modules/: LibomptargetGetDependencies.cmake
openmp/libomptarget/include/: ExclusiveAccess.h  device.h  omptarget.h  omptargetplugin.h  rtl.h
openmp/libomptarget/plugins/: CMakeLists.txt  exports
openmp/libomptarget/plugins-nextgen/cuda/src/: rtl.cpp
openmp/libomptarget/plugins-nextgen/mpi/: CMakeLists.txt
openmp/libomptarget/plugins-nextgen/mpi/src/: rtl.cpp
openmp/libomptarget/plugins/cuda/src/: rtl.cpp
openmp/libomptarget/plugins/mpi/: CMakeLists.txt
openmp/libomptarget/plugins/mpi/include/: Common.h  Coroutines.h  EventSystem.h  MPIManager.h
openmp/libomptarget/plugins/mpi/src/: EventSystem.cpp  EventSystem.h  MPIManager.cpp  MPIManager.h  rtl.cpp
openmp/libomptarget/src/: device.cpp  interface.cpp  omptarget.cpp  private.h  rtl.cpp
openmp/libomptarget/test/: lit.cfg
openmp/runtime/src/: kmp.h  kmp_tasking.cpp
